--- a/src/components/layout/footer/index.module.scss
+++ b/src/components/layout/footer/index.module.scss
@@ -1,31 +1,31 @@
 //@media screen and (min-width: 1440px) {
 .footer {
-	&__wrapper {
-		width: 1120px;
-		margin: 0 auto;
-	}
-	&__information {
-		display: flex;
-		justify-content: space-around;
-	}
-	&__detail {
-		p {
-			color: #25a18e;
-			font-weight: 600;
-			margin: 0;
-			margin-top: 50px;
-		}
-	}
-	&__information__link {
-		list-style-type: none;
-		padding: 0;
-		li {
-			margin: 10px 0 10px 0;
-		}
-	}
+  padding: 20px;
+  &__wrapper {
+    width: 1120px;
+    margin: 0 auto;
+  }
+  &__information {
+    display: flex;
+    justify-content: space-around;
+  }
+  &__detail {
+    p {
+      color: #25a18e;
+      font-weight: 600;
+      margin: 0;
+    }
+  }
+  &__information__link {
+    list-style-type: none;
+    padding: 0;
+    li {
+      margin: 10px 0 10px 0;
+    }
+  }
 }
 .link {
-	text-decoration: none;
-	color: #25a18e;
+  text-decoration: none;
+  color: #25a18e;
 }
 //}
