--- a/src/components/layout/header/index.module.scss
+++ b/src/components/layout/header/index.module.scss
@@ -1,39 +1,40 @@
 //@media screen and (min-width: 1440px) {
 .header {
-	color: #fff;
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	&__wrapper {
-		width: 1120px;
-		margin: 0 auto;
-	}
-	&__menu {
-		display: flex;
-		justify-content: space-between;
-	}
-	ul {
-		margin: 0;
-		padding: 0;
-	}
-	li {
-		list-style-type: none;
-		vertical-align: middle;
-		display: inline-block;
-		line-height: 40px;
-		font-size: 18px;
-		margin: 15px 30px 0 0;
-	}
-	//исправить отцентовку профиля
-	&__icon {
-		cursor: pointer;
-		font-size: 18px;
-		margin-top: 25px;
-	}
+  background-color: #fff;
+  z-index: 1;
+  &__wrapper {
+    width: 1120px;
+    margin: 0 auto;
+  }
+  &__menu {
+    display: flex;
+    justify-content: space-between;
+  }
+  ul {
+    margin: 0;
+    padding: 0;
+  }
+  li {
+    list-style-type: none;
+    vertical-align: middle;
+    display: inline-block;
+    line-height: 40px;
+    font-size: 18px;
+    margin: 15px 30px 15px 0;
+  }
+  a {
+    color: #000;
+  }
+  //исправить отцентовку профиля
+  &__icon {
+    cursor: pointer;
+    color: #000;
+    font-size: 18px;
+    margin-top: 25px;
+  }
 }
 .link {
-	text-decoration: none;
-	color: #fff;
+  text-decoration: none;
+  color: #fff;
 }
 //}
