--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,13 +1,18 @@
-@import '~normalize.css';
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,600;0,900;1,600&display=swap');
+@import "~normalize.css";
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,600;0,900;1,600&display=swap");
 html {
-	box-sizing: border-box;
+    box-sizing: border-box;
 }
 *,
 *:before,
 *:after {
-	box-sizing: inherit;
+    box-sizing: border-box;
 }
 body {
-	font-family: 'Montserrat', sans-serif;
+    font-family: "Montserrat", sans-serif;
+    padding: 0;
+    margin: 0;
+}
+img {
+    vertical-align: middle;
 }
