--- a/src/assets/shared/components/layout/header/index.module.scss
+++ b/src/assets/shared/components/layout/header/index.module.scss
@@ -23,19 +23,30 @@
         vertical-align: middle;
         display: inline-block;
         line-height: 40px;
-        font-size: 18px;
+        font-size: 16px;
         margin-right: 20px;
     }
     a {
         color: #000;
     }
     //исправить отцентовку профиля
+    &__profile {
+        display: flex;
+        align-items: center;
+    }
     &__icon {
         cursor: pointer;
         color: #000;
         font-size: 18px;
         display: flex;
         align-items: center;
+    }
+    &__user {
+        display: flex;
+        flex-direction: column;
+        font-size: 14px;
+        font-weight: 500;
+        margin-left: 24px;
     }
 }
 .link {
