--- a/src/assets/shared/components/pages/Events/EventsItem/index.module.scss
+++ b/src/assets/shared/components/pages/Events/EventsItem/index.module.scss
@@ -25,6 +25,8 @@
         display: flex;
         flex-direction: column;
         padding: 10px 10px;
+        border: #a09999 solid 1px;
+        border-radius: 0 0 8px 8px;
         &__label {
             font-size: 18px;
             font-weight: 600;
