--- a/src/assets/shared/components/pages/Home/index.module.scss
+++ b/src/assets/shared/components/pages/Home/index.module.scss
@@ -5,10 +5,14 @@
         position: relative;
     }
     &__main {
-        padding: 200px 0;
+        padding: 100px 0;
         z-index: 1;
+        position: relative;
+        display: grid;
+        grid-template-columns: repeat(2, 560px);
+
         &__label {
-            font-size: 70px;
+            font-size: 60px;
             font-weight: 500;
             color: #000;
             z-index: 1;
@@ -16,6 +20,12 @@
         &__btn {
             width: 200px;
             margin-top: 32px;
+        }
+        &__img {
+            display: flex;
+            align-items: center;
+            text-align: center;
+            justify-content: end;
         }
     }
     &__events {
