--- a/src/assets/shared/components/buttons/index.module.scss
+++ b/src/assets/shared/components/buttons/index.module.scss
@@ -1,16 +1,19 @@
 .btn {
-    cursor: pointer;
-    // text-align: center;
-    font-size: 18px;
-    font-weight: 500;
-    border: none;
-    border-radius: 6px;
-    background-color: black;
-    padding: 10px 15px;
-    color: #ffffff;
-    appearance: none;
-    width: 100%;
-    height: 48px;
+    &__click {
+        cursor: pointer;
+        font-size: 18px;
+        font-weight: 500;
+        border: none;
+        border-radius: 6px;
+        background-color: black;
+        padding: 10px 15px;
+        color: #ffffff;
+        width: 100%;
+        height: 48px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 }
 .btn:hover {
     opacity: 0.8;
