--- a/src/assets/shared/components/modalBase/index.module.scss
+++ b/src/assets/shared/components/modalBase/index.module.scss
@@ -13,31 +13,32 @@
         z-index: 60;
         &__windows {
             width: 343px;
-            height: 640px;
+            height: 440px;
+            border-radius: 8px;
             background-color: #fff;
             position: relative;
             overflow: auto;
         }
         &__header {
             background: #fff;
-            padding: 25px 24px;
+            height: 80px;
+            padding: 25px 16px;
             display: flex;
             justify-content: space-between;
             &__title {
-                font-size: 28px;
+                font-size: 24px;
                 font-weight: 600;
                 color: #000;
             }
             &__icon {
                 text-align: center;
                 display: flex;
-                text-align: center;
                 align-items: center;
             }
             &__cross {
                 cursor: pointer;
-                height: 20px;
-                width: 20px;
+                height: 30px;
+                width: 30px;
             }
         }
         &__body {
@@ -46,12 +47,12 @@
             flex-direction: column;
             justify-content: space-between;
             overflow: auto;
-            height: calc(640px - 80px - 80px);
+            height: calc(440px - 80px - 80px);
         }
         &__footer {
             display: grid;
             column-gap: 16px;
-            padding: 16px 24px;
+            padding: 16px 16px;
             width: 100%;
             position: absolute;
             bottom: 0;
