--- a/src/assets/shared/components/pages/Profile/index.module.scss
+++ b/src/assets/shared/components/pages/Profile/index.module.scss
@@ -1,3 +1,21 @@
+.message {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 343px;
+    max-height: 100%;
+    text-align: center;
+    &__text {
+        font-size: 24px;
+        line-height: 34px;
+        font-weight: 600;
+    }
+    &__btn {
+        margin-top: 10px;
+    }
+}
+
 .wrapper {
     padding: 0 16px;
     max-width: 375px;
