--- a/src/assets/shared/components/modal/ModalCreateTimetable/index.module.scss
+++ b/src/assets/shared/components/modal/ModalCreateTimetable/index.module.scss
@@ -3,6 +3,11 @@
     line-height: 20px;
     font-weight: 600;
 }
+.body {
+    &__input {
+        margin-bottom: 20px;
+    }
+}
 @media screen and (min-width: 768px) {
     .text {
         font-size: 16px;
