--- a/src/assets/shared/components/modalBase/index.module.scss
+++ b/src/assets/shared/components/modalBase/index.module.scss
@@ -20,20 +20,23 @@
         }
         &__header {
             background: #fff;
-            height: 80px;
-            padding: 24px 24px;
+            padding: 23px;
             display: flex;
             justify-content: space-between;
             &__title {
+                display: flex;
+                align-items: center;
                 font-size: 20px;
                 line-height: 30px;
                 font-weight: 600;
                 color: #000;
             }
             &__icon {
+                cursor: pointer;
                 text-align: center;
                 display: flex;
                 align-items: center;
+                padding: 5px;
             }
             &__cross {
                 cursor: pointer;
@@ -69,11 +72,12 @@
         }
         &__header {
             background: #fff;
-            height: 80px;
-            padding: 25px 24px;
+            padding: 23px;
             display: flex;
             justify-content: space-between;
             &__title {
+                display: flex;
+                align-items: center;
                 font-size: 20px;
                 line-height: 30px;
                 font-weight: 600;
@@ -95,6 +99,58 @@
             column-gap: 16px;
             padding: 16px 16px;
             width: 100%;
+        }
+    }
+    &__large {
+        &__windows {
+            width: 500px;
+            height: 550px;
+            border-radius: 8px;
+            background-color: #fff;
+            position: relative;
+            overflow: auto;
+        }
+        &__header {
+            background: #fff;
+            padding: 23px;
+            display: flex;
+            justify-content: space-between;
+            &__title {
+                display: flex;
+                align-items: center;
+                font-size: 20px;
+                line-height: 30px;
+                font-weight: 600;
+                color: #000;
+            }
+            &__icon {
+                cursor: pointer;
+                text-align: center;
+                display: flex;
+                align-items: center;
+                padding: 5px;
+            }
+            &__cross {
+                cursor: pointer;
+                height: 30px;
+                width: 30px;
+            }
+        }
+        &__body {
+            padding: 24px 24px 0 24px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            overflow: auto;
+            height: calc(550px - 80px - 80px);
+        }
+        &__footer {
+            display: grid;
+            column-gap: 16px;
+            padding: 16px 16px;
+            width: 100%;
+            position: absolute;
+            bottom: 0;
         }
     }
 }
