--- a/src/assets/shared/components/buttons/index.module.scss
+++ b/src/assets/shared/components/buttons/index.module.scss
@@ -23,6 +23,11 @@
         color: #1e4a91;
         border: 2px solid #1e4a91;
     }
+    &__delete {
+        background-color: #f2f2f2;
+        color: red;
+        border: 2px solid red;
+    }
 }
 .btn:disabled {
     cursor: default;
