--- a/src/assets/shared/components/layout/footer/index.module.scss
+++ b/src/assets/shared/components/layout/footer/index.module.scss
@@ -4,8 +4,8 @@
     // height: 50px;
     &__wrapper {
         padding: 0 16px;
-        max-width: 375px;
-        margin: 0 auto;
+        // max-width: 375px;
+        // margin: 0 auto;
         // display: flex;
         // align-items: center;
     }
@@ -42,8 +42,8 @@
     .footer {
         &__wrapper {
             padding: 0 24px;
-            max-width: 768px;
-            margin: 0 auto;
+            // max-width: 768px;
+            // margin: 0 auto;
             width: 100%;
             height: 100%;
         }
