--- a/src/assets/shared/components/layout/header/index.module.scss
+++ b/src/assets/shared/components/layout/header/index.module.scss
@@ -18,8 +18,8 @@
         padding: 0 16px;
         height: 100%;
         z-index: 50;
-        max-width: 375px;
-        margin: 0 auto;
+        // max-width: 375px;
+        // margin: 0 auto;
     }
     &__content {
         display: flex;
@@ -73,6 +73,7 @@
         display: flex;
         height: 40px;
         margin-left: 50px;
+        margin-top: 16px;
     }
     &__list {
         display: flex;
@@ -80,6 +81,8 @@
         margin: 0;
         padding: 0;
         margin-left: 50px;
+        gap: 16px;
+        margin-top: 16px;
     }
     li {
         display: inline-block;
@@ -104,8 +107,8 @@
     .header {
         &__wrapper {
             padding: 0 24px;
-            max-width: 768px;
-            margin: 0 auto;
+            // max-width: 768px;
+            // margin: 0 auto;
         }
     }
 }
