--- a/src/assets/shared/components/pages/Home/index.module.scss
+++ b/src/assets/shared/components/pages/Home/index.module.scss
@@ -2,8 +2,8 @@
     width: 100%;
     &__wrapper {
         padding: 0 16px;
-        max-width: 375px;
-        margin: 0 auto;
+        // max-width: 375px;
+        // margin: 0 auto;
         position: relative;
     }
     &__main {
@@ -78,8 +78,8 @@
     .home {
         &__wrapper {
             padding: 0 24px;
-            max-width: 768px;
-            margin: 0 auto;
+            // max-width: 768px;
+            // margin: 0 auto;
             position: relative;
         }
         &__main {
