--- a/src/assets/shared/components/pages/Meeting/MeetingView/index.module.scss
+++ b/src/assets/shared/components/pages/Meeting/MeetingView/index.module.scss
@@ -17,8 +17,8 @@
 }
 .wrapper {
     padding: 0 16px;
-    max-width: 375px;
-    margin: 0 auto;
+    //max-width: 375px;
+    //margin: 0 auto;
 }
 .img {
     width: 100%;
@@ -87,9 +87,11 @@
     &__qr {
         margin: 0 auto;
         &__text {
+            display: flex;
             font-size: 14px;
             line-height: 24px;
             font-weight: 500;
+            text-align: center;
         }
     }
 }
@@ -125,8 +127,8 @@
 @media screen and (min-width: 768px) {
     .wrapper {
         padding: 0 24px;
-        max-width: 768px;
-        margin: 0 auto;
+        //max-width: 768px;
+        //margin: 0 auto;
     }
     .img {
         width: 100%;
@@ -194,7 +196,7 @@
         &__title {
             font-size: 18px;
             line-height: 28px;
-            font-weight: 500;
+            font-weight: 600;
         }
         &__text {
             margin-top: 10px;
@@ -284,7 +286,7 @@
         &__title {
             font-size: 18px;
             line-height: 28px;
-            font-weight: 500;
+            font-weight: 600;
         }
         &__text {
             margin-top: 10px;
@@ -374,7 +376,7 @@
         &__title {
             font-size: 18px;
             line-height: 28px;
-            font-weight: 500;
+            font-weight: 600;
         }
         &__text {
             margin-top: 10px;
