--- a/src/assets/shared/components/pages/Profile/index.module.scss
+++ b/src/assets/shared/components/pages/Profile/index.module.scss
@@ -18,8 +18,8 @@
 
 .wrapper {
     padding: 0 16px;
-    max-width: 375px;
-    margin: 0 auto;
+    //max-width: 375px;
+    //margin: 0 auto;
 }
 .body {
     display: flex;
@@ -66,7 +66,7 @@
         border: 2px solid #b3b3b3;
         border-radius: 6px;
         width: 100%;
-        height: 100%;
+        height: auto;
         padding: 10px;
         &__title {
             font-size: 18px;
@@ -84,6 +84,9 @@
         }
     }
     &__btn {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
         margin-top: 10px;
     }
 }
@@ -91,8 +94,8 @@
 @media screen and (min-width: 768px) {
     .wrapper {
         padding: 0 24px;
-        max-width: 768px;
-        margin: 0 auto;
+        //max-width: 768px;
+        //margin: 0 auto;
     }
     .body {
         display: flex;
@@ -138,7 +141,7 @@
             border: 2px solid #b3b3b3;
             border-radius: 6px;
             width: 100%;
-            height: 100%;
+            height: auto;
             padding: 10px;
             &__title {
                 font-size: 22px;
@@ -208,7 +211,7 @@
             border: 2px solid #b3b3b3;
             border-radius: 6px;
             width: 100%;
-            height: 100%;
+            height: auto;
             padding: 10px;
             &__title {
                 font-size: 22px;
@@ -277,7 +280,7 @@
             border: 2px solid #b3b3b3;
             border-radius: 6px;
             width: 100%;
-            height: 100%;
+            height: auto;
             padding: 10px;
             &__title {
                 font-size: 22px;
