--- a/src/assets/shared/components/Loader/index.module.scss
+++ b/src/assets/shared/components/Loader/index.module.scss
@@ -5,13 +5,14 @@
     bottom: 0;
     left: 0;
     background-color: #fff;
-    opacity: 0.75;
+    opacity: 0.9;
     z-index: 999;
     width: 100vw;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
     &__tail {
         width: 60px;
         height: 60px;
