--- a/src/assets/shared/components/QrCode/index.module.scss
+++ b/src/assets/shared/components/QrCode/index.module.scss
@@ -4,9 +4,9 @@
     &__block {
         margin: 10px auto 0;
         max-width: 220px;
-        padding: 15px;
-        background-color: #1e4a91;
-        border-radius: 15px;
+        // padding: 10px;
+        // background-color: #1e4a91;
+        border-radius: 6px;
         @media (min-width: 768px) {
             max-width: 500px;
         }
