--- a/src/assets/shared/components/inputs/InputDropdown/index.module.scss
+++ b/src/assets/shared/components/inputs/InputDropdown/index.module.scss
@@ -26,6 +26,7 @@
     display: flex;
     gap: 0.5em;
     flex-wrap: wrap;
+    padding-right: 30px;
 }
 
 .clear-btn {
@@ -128,4 +129,26 @@
 .remove-btn {
     display: flex;
     align-items: center;
+}
+.tag {
+    background-color: rgba(50, 94, 165, 0.3215686275);
+    border-radius: 50px;
+    padding: 5px 10px;
+    display: inline-flex;
+    align-items: center;
+    margin: 0 10px 10px 0;
+    &__color {
+        width: 10px;
+        height: 10px;
+        background: #1e4a91;
+        border-radius: 50%;
+    }
+    &__name {
+        font-size: 14px;
+        line-height: 20px;
+        letter-spacing: 1.5px;
+        font-weight: 600;
+        color: #000;
+        margin-left: 10px;
+    }
 }
