--- a/src/assets/shared/components/modal/ModalCreateTimetable/index.module.scss
+++ b/src/assets/shared/components/modal/ModalCreateTimetable/index.module.scss
@@ -8,6 +8,13 @@
         margin-bottom: 20px;
     }
 }
+.modal {
+    position: fixed;
+    top: 15%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 60;
+}
 @media screen and (min-width: 768px) {
     .text {
         font-size: 16px;
