--- a/src/assets/shared/components/pages/Data/index.module.scss
+++ b/src/assets/shared/components/pages/Data/index.module.scss
@@ -29,7 +29,13 @@
         gap: 10px;
     }
 }
-
+.modal {
+    position: fixed;
+    top: 15%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 60;
+}
 @media screen and (min-width: 768px) {
     .wrapper {
         padding: 0 24px;
