--- a/src/assets/shared/components/pages/Home/index.module.scss
+++ b/src/assets/shared/components/pages/Home/index.module.scss
@@ -38,12 +38,6 @@
         background-color: #dedede;
         padding: 100px 0;
         width: 100%;
-        &__item {
-            // display: grid;
-            // grid-template-columns: repeat(2, 455px);
-            // gap: 60px;
-            // justify-content: center;
-        }
         &__left {
             position: absolute;
             top: 50%;
@@ -66,7 +60,6 @@
             font-size: 16px;
             line-height: 24px;
             margin: 0 auto;
-            text-align: justify;
         }
         &__btn {
             width: 100%;
@@ -74,6 +67,7 @@
         }
     }
 }
+.slider{}
 @media screen and (min-width: 768px) {
     .home {
         &__wrapper {
