--- a/src/assets/shared/components/pages/Meeting/CreateMeeting/index.module.scss
+++ b/src/assets/shared/components/pages/Meeting/CreateMeeting/index.module.scss
@@ -10,7 +10,7 @@
         font-size: 24px;
         line-height: 34px;
         font-weight: 600;
-        margin-bottom: 5px;
+        margin-bottom: 20px;
     }
     &__header {
         display: grid;
@@ -20,6 +20,20 @@
     &__meeting {
         display: grid;
         overflow: auto;
+    }
+    &__message {
+        display: block;
+        align-items: center;
+        gap: 16px;
+        span {
+            font-size: 18px;
+            line-height: 28px;
+            font-weight: 600;
+        }
+        &__btn {
+            width: 200px;
+            margin-top: 16px;
+        }
     }
 }
 
@@ -42,6 +56,20 @@
             gap: 20px;
             margin-bottom: 40px;
         }
+        &__message {
+            display: flex;
+            align-items: center;
+            gap: 16px;
+            span {
+                font-size: 18px;
+                line-height: 28px;
+                font-weight: 600;
+            }
+            &__btn {
+                width: 200px;
+                margin: 0;
+            }
+        }
     }
 }
 @media screen and (min-width: 1024px) {
@@ -61,6 +89,20 @@
             grid-template-columns: 3fr 1fr;
             gap: 20px;
             margin-bottom: 40px;
+        }
+        &__message {
+            display: flex;
+            align-items: center;
+            gap: 16px;
+            span {
+                font-size: 18px;
+                line-height: 28px;
+                font-weight: 600;
+            }
+            &__btn {
+                width: 200px;
+                margin: 0;
+            }
         }
     }
 }
@@ -86,6 +128,20 @@
             display: block;
             overflow: visible;
             width: 100%;
+        }
+        &__message {
+            display: flex;
+            align-items: center;
+            gap: 16px;
+            span {
+                font-size: 18px;
+                line-height: 28px;
+                font-weight: 600;
+            }
+            &__btn {
+                width: 200px;
+                margin: 0;
+            }
         }
     }
 }
