--- a/src/assets/shared/components/pages/Meeting/CreateMeetingView/index.module.scss
+++ b/src/assets/shared/components/pages/Meeting/CreateMeetingView/index.module.scss
@@ -1,3 +1,20 @@
+.message {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 343px;
+    max-height: 100%;
+    text-align: center;
+    &__text {
+        font-size: 22px;
+        line-height: 30px;
+        font-weight: 600;
+    }
+    &__btn {
+        margin-top: 10px;
+    }
+}
 .wrapper {
     padding: 0 16px;
     //max-width: 375px;
@@ -18,6 +35,29 @@
         display: grid;
         overflow: auto;
         margin-top: 40px;
+        &__header {
+            display: flex;
+            // align-items: center;
+            justify-content: space-between;
+            flex-direction: column;
+            margin-top: 40px;
+            &__title {
+                font-size: 22px;
+                line-height: 32px;
+                font-weight: 600;
+            }
+            &__btn {
+                width: 343px;
+                margin-top: 20px;
+            }
+            &__message {
+                font-size: 14px;
+                line-height: 20px;
+                font-weight: 500;
+                color: rgba(0, 0, 0, 0.6);
+                margin-top: 10px;
+            }
+        }
     }
 }
 .btn {
@@ -30,6 +70,29 @@
         padding: 0 24px;
         //max-width: 768px;
         //margin: 0 auto;
+    }
+    .body {
+        &__guest {
+            &__header {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                flex-direction: row;
+                margin-top: 40px;
+                &__title {
+                    font-size: 22px;
+                    line-height: 32px;
+                    font-weight: 600;
+                }
+                &__btn {
+                    width: 343px;
+                    margin-top: 0;
+                }
+                &__message {
+                    text-align: right;
+                }
+            }
+        }
     }
 }
 
