--- a/src/assets/shared/components/pages/Meeting/MeetingItem/index.module.scss
+++ b/src/assets/shared/components/pages/Meeting/MeetingItem/index.module.scss
@@ -40,9 +40,10 @@
             font-size: 16px;
             line-height: 24px;
             font-weight: 600;
+            height: 100%;
         }
         &__location {
-            margin-top: 35px;
+            margin-top: 20px;
             font-size: 14px;
             line-height: 20px;
             font-weight: 500;
@@ -96,7 +97,7 @@
                 font-weight: 600;
             }
             &__location {
-                margin-top: 35px;
+                margin-top: 20px;
                 font-size: 14px;
                 line-height: 20px;
                 font-weight: 500;
@@ -140,7 +141,7 @@
                 font-weight: 600;
             }
             &__location {
-                margin-top: 35px;
+                margin-top: 20px;
                 font-size: 14px;
                 line-height: 20px;
                 font-weight: 500;
@@ -185,7 +186,7 @@
                 font-weight: 600;
             }
             &__location {
-                margin-top: 35px;
+                margin-top: 20px;
                 font-size: 14px;
                 line-height: 20px;
                 font-weight: 500;
