--- a/src/assets/shared/components/pages/Meeting/MeetingView/index.module.scss
+++ b/src/assets/shared/components/pages/Meeting/MeetingView/index.module.scss
@@ -7,8 +7,8 @@
     max-height: 100%;
     text-align: center;
     &__text {
-        font-size: 24px;
-        line-height: 34px;
+        font-size: 22px;
+        line-height: 30px;
         font-weight: 600;
     }
     &__btn {
@@ -62,9 +62,6 @@
             justify-items: center;
             text-align: center;
             margin-top: 15px;
-            &__time {
-                width: 50px;
-            }
         }
     }
 }
@@ -83,16 +80,6 @@
         align-items: center;
         margin: 0 auto;
         width: 100%;
-    }
-    &__qr {
-        margin: 0 auto;
-        &__text {
-            display: flex;
-            font-size: 14px;
-            line-height: 24px;
-            font-weight: 500;
-            text-align: center;
-        }
     }
 }
 .info {
@@ -123,7 +110,13 @@
     flex-direction: column;
     width: 100%;
 }
-
+.modal {
+    position: fixed;
+    top: 15%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 60;
+}
 @media screen and (min-width: 768px) {
     .wrapper {
         padding: 0 24px;
