--- a/src/assets/shared/components/Loader/index.module.scss
+++ b/src/assets/shared/components/Loader/index.module.scss
@@ -18,9 +18,9 @@
         height: 60px;
         background-color: transparent;
         border: 4px solid transparent;
-        border-top: 4px solid #000; /* White color for the spinner */
+        border-top: 4px solid #000;
         border-radius: 50%;
-        animation: spin 1.3s linear infinite; /* Spinning animation */
+        animation: spin 1.3s linear infinite;
     }
 }
 @keyframes spin {
