--- a/src/assets/shared/components/pages/Home/index.module.scss
+++ b/src/assets/shared/components/pages/Home/index.module.scss
@@ -67,7 +67,44 @@
         }
     }
 }
-.slider{}
+@media screen and (min-width: 480px) {
+    .home {
+        &__wrapper {
+            padding: 0 24px;
+            // max-width: 768px;
+            // margin: 0 auto;
+            position: relative;
+        }
+        &__main {
+            padding: 100px 0px;
+            z-index: 1;
+            position: relative;
+            display: block;
+            &__label {
+                font-size: 26px;
+                font-weight: 600;
+                color: #000;
+                text-align: center;
+                margin-bottom: 10px;
+            }
+            &__btn {
+                width: 350px;
+                margin: 32px auto;
+            }
+            &__img {
+                text-align: center;
+                margin: 0 auto;
+                width: 100%;
+                height: 100%;
+                &__img {
+                    width: 350px;
+                    height: 550px;
+                }
+            }
+        }
+    }
+}
+
 @media screen and (min-width: 768px) {
     .home {
         &__wrapper {
@@ -95,6 +132,7 @@
             &__img {
                 // position: relative;
                 text-align: center;
+                margin: 0 auto;
                 width: 100%;
                 height: 100%;
                 &__img {
