--- a/src/assets/shared/components/pages/Qr/index.module.scss
+++ b/src/assets/shared/components/pages/Qr/index.module.scss
@@ -15,6 +15,18 @@
         margin-top: 10px;
     }
 }
+.error {
+    margin: 10px auto;
+    font-size: 18px;
+    line-height: 28px;
+    font-weight: 600;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 343px;
+}
 .container {
     display: flex;
     flex-direction: column;
@@ -175,6 +187,9 @@
     height: 100%;
     &__btn {
         margin-bottom: 20px;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
     }
 }
 
