--- a/src/assets/shared/components/Loader/index.module.scss
+++ b/src/assets/shared/components/Loader/index.module.scss
@@ -5,7 +5,7 @@
     bottom: 0;
     left: 0;
     background-color: #fff;
-    opacity: 0.9;
+    // opacity: 0.9;
     z-index: 999;
     width: 100vw;
     height: 100%;
