--- a/src/assets/shared/components/inputs/index.module.scss
+++ b/src/assets/shared/components/inputs/index.module.scss
@@ -167,6 +167,45 @@
         border: 2px solid #000;
         outline: none;
     }
+    &__field {
+        width: 100%;
+        height: 48px;
+        padding: 10px 35px 10px 15px;
+        border: none;
+        border: 2px solid #b3b3b3;
+        border-radius: 8px;
+        outline: none;
+        font-size: 16px;
+        font-weight: 400;
+        letter-spacing: 0.5px;
+        color: #000;
+        &__error {
+            width: 100%;
+            height: 48px;
+            padding: 10px 35px 10px 15px;
+            border: none;
+            border: 2px solid #ff4570;
+            border-radius: 6px;
+            outline: none;
+            font-size: 16px;
+            line-height: 24px;
+            font-weight: 400;
+            letter-spacing: 0.5px;
+            color: #000;
+        }
+        &__change {
+            display: flex;
+            gap: 10px;
+        }
+    }
+    &__field:hover {
+        border: 2px solid #000;
+        outline: none;
+    }
+    &__field:focus {
+        border: 2px solid #000;
+        outline: none;
+    }
 }
 .date {
     font-family: "Montserrat" !important;
@@ -195,4 +234,13 @@
 }
 .rdp-caption_label {
     font-family: "Montserrat" !important;
+}
+.btns {
+    display: flex;
+    gap: 10px;
+    &__icon {
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+    }
 }
