--- a/src/assets/shared/components/Voting/index.module.scss
+++ b/src/assets/shared/components/Voting/index.module.scss
@@ -22,7 +22,7 @@
         }
     }
     &__item {
-        padding: 10px 0;
+        padding-bottom: 10px;
         &__btn {
             font-family: "Montserrat", sans-serif;
             cursor: pointer;
@@ -40,6 +40,7 @@
             text-align: left;
             background-color: rgba(50, 94, 165, 0.3215686275);
             margin: 10px 0;
+            justify-content: space-between;
         }
     }
 }
