--- a/src/assets/shared/components/Loader/index.module.scss
+++ b/src/assets/shared/components/Loader/index.module.scss
@@ -13,6 +13,7 @@
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    // animation: hideLoad 1s;
     &__tail {
         width: 60px;
         height: 60px;
@@ -29,5 +30,14 @@
     }
     100% {
         transform: rotate(360deg);
+    }
+}
+
+@keyframes hideLoad {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
     }
 }
