--- a/src/assets/shared/components/pages/Meeting/CreateMeetingView/index.module.scss
+++ b/src/assets/shared/components/pages/Meeting/CreateMeetingView/index.module.scss
@@ -52,6 +52,14 @@
                 font-size: 22px;
                 line-height: 32px;
                 font-weight: 600;
+                &__empty {
+                    display: flex;
+                    font-size: 14px;
+                    line-height: 20px;
+                    font-weight: 500;
+                    color: rgba(0, 0, 0, 0.6);
+                    margin-top: 10px;
+                }
             }
             &__btn {
                 width: 100%;
