--- a/src/assets/shared/components/layout/footer/index.module.scss
+++ b/src/assets/shared/components/layout/footer/index.module.scss
@@ -19,11 +19,12 @@
         display: inline-flex;
         font-size: 14px;
         font-weight: 500;
-        line-height: 28px;
+        line-height: 20px;
         letter-spacing: 0.5px;
     }
     &__link {
         display: inline-flex;
+        gap: 10px;
         // right: 0;
         // top: 8px;
         // position: absolute;
