--- a/src/assets/shared/components/pages/Data/index.module.scss
+++ b/src/assets/shared/components/pages/Data/index.module.scss
@@ -20,7 +20,7 @@
 }
 .body {
     width: 100%;
-    margin: 40px 0;
+    margin: 20px 0;
     &__input {
         margin-bottom: 20px;
     }
@@ -28,6 +28,9 @@
         display: flex;
         flex-direction: column;
         gap: 10px;
+    }
+    &__img {
+        margin-bottom: 20px;
     }
 }
 .modal {
@@ -59,7 +62,7 @@
     }
     .body {
         width: 343px;
-        margin: 40px 0;
+        margin: 20px 0;
         &__input {
             margin-bottom: 20px;
         }
@@ -88,7 +91,7 @@
     }
     .body {
         width: 343px;
-        margin: 40px 0;
+        margin: 20px 0;
         &__input {
             margin-bottom: 20px;
         }
@@ -117,7 +120,7 @@
     }
     .body {
         width: 343px;
-        margin: 40px 0;
+        margin: 20px 0;
         &__input {
             margin-bottom: 20px;
         }
