--- a/src/assets/shared/components/pages/Profile/index.module.scss
+++ b/src/assets/shared/components/pages/Profile/index.module.scss
@@ -27,6 +27,7 @@
     top: 11%;
     z-index: 2;
     &__tab {
+        font-family: "Montserrat", sans-serif;
         cursor: pointer;
         background-color: transparent;
         border: 2px solid #b3b3b3;
@@ -35,7 +36,7 @@
         line-height: 20px;
         font-weight: 500;
         padding: 5px 10px;
-        width: 120px;
+        // width: 120px;
         // height: 40px;
         &__active {
             background-color: #325ea552;
@@ -138,18 +139,22 @@
 }
 @media screen and (min-width: 480px) {
     .wrapper {
-        padding: 0 24px;
+        padding: 0 16px;
         //max-width: 768px;
         //margin: 0 auto;
     }
     .body {
-        &__info {
-            &__list {
-                display: grid;
-                grid-template-columns: repeat(2, 1fr);
-                grid-template-rows: auto;
-                justify-content: center;
-                gap: 12px;
+        &__profile {
+            width: 100%;
+            height: 100%;
+            &__info {
+                &__list {
+                    display: grid;
+                    grid-template-columns: repeat(2, 1fr);
+                    grid-template-rows: auto;
+                    justify-content: center;
+                    gap: 12px;
+                }
             }
         }
     }
