--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -9,7 +9,7 @@ html {
 *:after {
     box-sizing: border-box;
 }
-body {
+* {
     font-family: "Montserrat", sans-serif;
     padding: 0;
     margin: 0;
