--- a/src/assets/shared/components/pages/Profile/index.module.scss
+++ b/src/assets/shared/components/pages/Profile/index.module.scss
@@ -24,7 +24,7 @@
     display: flex;
     gap: 5px;
     position: absolute;
-    top: 11%;
+    top: 90px;
     z-index: 2;
     &__tab {
         font-family: "Montserrat", sans-serif;
