--- a/src/assets/shared/components/QrShare/index.module.scss
+++ b/src/assets/shared/components/QrShare/index.module.scss
@@ -1,3 +1,11 @@
+.main {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 343px;
+    max-height: 100%;
+}
 .qr {
     display: flex;
     flex-direction: column;
