--- a/src/assets/shared/components/pages/Meeting/CreateMeetingView/index.module.scss
+++ b/src/assets/shared/components/pages/Meeting/CreateMeetingView/index.module.scss
@@ -27,6 +27,11 @@
     //max-width: 375px;
     //margin: 0 auto;
 }
+.qr {
+    display: inline-flex;
+    margin-top: 20px;
+    cursor: pointer;
+}
 .body {
     padding: 100px 0;
     &__title {
@@ -47,7 +52,7 @@
             // align-items: center;
             justify-content: space-between;
             flex-direction: column;
-            margin-top: 40px;
+            margin-top: 20px;
             &__title {
                 font-size: 22px;
                 line-height: 32px;
@@ -122,7 +127,7 @@
                 align-items: center;
                 justify-content: space-between;
                 flex-direction: row;
-                margin-top: 40px;
+                margin-top: 20px;
                 &__title {
                     font-size: 22px;
                     line-height: 32px;
