--- a/src/assets/shared/components/pages/Meeting/MeetingItem/index.module.scss
+++ b/src/assets/shared/components/pages/Meeting/MeetingItem/index.module.scss
@@ -28,6 +28,7 @@
             padding: 4px 5px;
             border-radius: 0 8px 0 0;
             bottom: 0;
+            width: 85px;
         }
     }
     &__footer {
