--- a/src/assets/shared/components/UploadPhoto/index.module.scss
+++ b/src/assets/shared/components/UploadPhoto/index.module.scss
@@ -97,9 +97,6 @@
     text-align: center;
 }
 
-.error span {
-    color: red;
-}
 .fullscreen-overlay {
     position: fixed;
     top: 0;
@@ -118,4 +115,15 @@
     max-width: 90%;
     max-height: 90%;
     cursor: pointer;
+}
+.error {
+    width: 200px;
+    margin: 10px 0;
+    text-align: left;
+    &__text {
+        font-size: 14px;
+        line-height: 20px;
+        font-weight: 500;
+        color: rgba(0, 0, 0, 0.6);
+    }
 }
