--- a/src/assets/shared/components/pages/Meeting/CreateMeeting/index.module.scss
+++ b/src/assets/shared/components/pages/Meeting/CreateMeeting/index.module.scss
@@ -10,7 +10,9 @@
         font-size: 24px;
         line-height: 34px;
         font-weight: 600;
-        margin-bottom: 20px;
+        // margin-bottom: 20px;
+        display: flex;
+        align-items: center;
     }
     &__header {
         display: grid;
