--- a/src/assets/shared/components/pages/Meeting/MeetingList/index.module.scss
+++ b/src/assets/shared/components/pages/Meeting/MeetingList/index.module.scss
@@ -23,6 +23,9 @@
         &__divider {
             margin: 0 10px;
         }
+        &__recommended {
+            margin-bottom: 68px;
+        }
     }
     &__header {
         display: flex;
