--- a/src/assets/shared/components/Tag/index.module.scss
+++ b/src/assets/shared/components/Tag/index.module.scss
@@ -1,5 +1,5 @@
 .tag {
-    background-color: rgba(50, 94, 165, 0.3215686275);
+    background-color: rgba(50, 94, 165, 0.33);
     border-radius: 50px;
     padding: 5px 10px;
     display: inline-flex;
