--- a/src/assets/shared/components/Voting/index.module.scss
+++ b/src/assets/shared/components/Voting/index.module.scss
@@ -38,9 +38,12 @@
             display: flex;
             align-items: center;
             text-align: left;
-            background-color: rgba(50, 94, 165, 0.3215686275);
+            background-color: rgba(50, 94, 165, 0.33);
             margin: 10px 0;
             justify-content: space-between;
+            &__active {
+                background-color: rgba(50, 94, 165, 0.6);
+            }
         }
     }
 }
