--- a/src/assets/shared/components/inputs/InputDropdown/index.module.scss
+++ b/src/assets/shared/components/inputs/InputDropdown/index.module.scss
@@ -145,7 +145,7 @@
     align-items: center;
 }
 .tag {
-    background-color: rgba(50, 94, 165, 0.3215686275);
+    background-color: rgba(50, 94, 165, 0.33);
     border-radius: 50px;
     padding: 5px 10px;
     display: inline-flex;
