--- a/src/assets/shared/components/pages/Qr/index.module.scss
+++ b/src/assets/shared/components/pages/Qr/index.module.scss
@@ -143,14 +143,18 @@
     }
     &__guest {
         position: fixed;
-        top: 56px;
-        // bottom: 220px;
+        // top: 56px;
+        // bottom: 69px;
         left: 0;
         right: 0;
         display: flex;
         overflow: auto;
         z-index: 1;
         height: calc(100vh - 56px - 69px);
+        // height: 100vh;
+        // height: 100%;
+        margin: 56px 0 69px 0;
+        // padding-bottom: 120px;
         background-color: #fff;
         &__list {
             display: flex;
@@ -207,7 +211,7 @@
 .wrapper {
     padding: 0 16px;
     width: 100%;
-    margin: 0 auto;
+    // margin: 0 auto;
 }
 .modal {
     position: fixed;
