--- a/src/assets/shared/components/pages/Qr/index.module.scss
+++ b/src/assets/shared/components/pages/Qr/index.module.scss
@@ -144,20 +144,19 @@
     &__guest {
         position: fixed;
         top: 56px;
-        bottom: 260px;
+        bottom: 280px;
         left: 0;
         right: 0;
         display: flex;
         overflow: auto;
         z-index: 1;
-        // height: calc(100vh - 56px - 69px);
-        height: 100%;
+        height: calc(100vh - 56px - 69px);
+        // height: 100%;
         background-color: #fff;
         &__list {
             display: flex;
             flex-direction: column;
             overflow: auto;
-            height: 100%;
             height: calc(100vh - 56px - 200px);
             &__header {
                 margin: 10px auto;
