--- a/src/assets/shared/components/UploadPhoto/index.module.scss
+++ b/src/assets/shared/components/UploadPhoto/index.module.scss
@@ -65,7 +65,7 @@
 
 @media (hover: hover) {
     .image button:hover {
-        background-color: red;
+        background-color: #ff4570;
     }
 }
 
