--- a/src/assets/shared/components/pages/Meeting/CreateMeetingView/components/CreateMeetingViewItem/index.module.scss
+++ b/src/assets/shared/components/pages/Meeting/CreateMeetingView/components/CreateMeetingViewItem/index.module.scss
@@ -9,6 +9,7 @@
     grid-template-columns: repeat(4, 230px);
     padding: 5px 10px;
     height: 48px;
+    position: relative;
     span {
         font-size: 14px;
         line-height: 20px;
@@ -17,6 +18,26 @@
     @media (hover: hover) {
         &:hover {
             background-color: #325ea552;
+        }
+    }
+    &__btn {
+        cursor: pointer;
+        position: absolute;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        right: 20px;
+
+        border: none;
+        color: white;
+        background-color: #b3b3b3;
+        border-radius: 6px;
+        padding: 5px;
+    }
+    @media (hover: hover) {
+        &__btn:hover {
+            background-color: #ff4570;
         }
     }
 }
